<resources>
    <string name="app_name">RealmPOC</string>
    <string name="dog_name_card_string">Name: %1$s</string>
    <string name="dog_age_card_string">Age: %1$s</string>
    <string name="dog_owner_card_string">Owner Name: %1$s</string>
    <string name="dog_address_card_string">Address: %1$s</string>
    <string name="name_already_added_error">There is a dog with that name already!</string>
    <string name="no_dogs_added_yet_error">There is no dog added yet!</string>
    <string name="title_main_activity">My Dogs</string>
    <string name="main_activity_edit_text_name_hint">Name of the dog</string>
    <string name="main_activity_edit_text_age_hint">Age of the dog</string>
    <string name="main_activity_edit_text_owner_name_hint">Name of the owner</string>
    <string name="main_activity_edit_text_address_hint">Address of the owner</string>
    <string name="main_activity_button_add_dog">Add Dog!</string>
    <string name="main_activity_empty_field_warning">Please all the information of the dog</string>
    <string name="main_activity_edit_text_search_by_owner_name_hint">Search by owner name</string>
</resources>
