<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/title_activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/main_activity_title_margin_vertical"
        android:gravity="center"
        android:text="@string/title_main_activity"
        android:textColor="@color/black"
        android:textSize="@dimen/main_activity_title_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/activity_main_search_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/main_activity_search_field_margin_vertical"
        android:layout_marginStart="@dimen/main_activity_search_field_margin_start"
        android:hint="@string/main_activity_edit_text_search_by_owner_name_hint"
        app:layout_constraintEnd_toStartOf="@id/activity_main_search_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_activity_main" />

    <ImageButton
        android:id="@+id/activity_main_search_button"
        android:layout_width="@dimen/main_activity_search_button_width"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/main_activity_search_button_margin_horizontal"
        android:backgroundTint="@color/white"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_search"
        app:layout_constraintBottom_toBottomOf="@id/activity_main_search_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/activity_main_search_edit_text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollIndicators="bottom"
        android:outlineSpotShadowColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/dog_name_field"
        app:layout_constraintTop_toBottomOf="@id/activity_main_search_button" />

    <EditText
        android:id="@+id/dog_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_activity_edit_text_name_hint"
        app:layout_constraintBottom_toTopOf="@id/dog_age_field"
        app:layout_constraintTop_toBottomOf="@id/recycler_view" />

    <EditText
        android:id="@+id/dog_age_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_activity_edit_text_age_hint"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@id/dog_owner_name_field" />

    <EditText
        android:id="@+id/dog_owner_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_activity_edit_text_owner_name_hint"
        app:layout_constraintBottom_toTopOf="@id/dog_address_field" />

    <EditText
        android:id="@+id/dog_address_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_activity_edit_text_address_hint"
        app:layout_constraintBottom_toTopOf="@id/add_dog_button" />

    <Button
        android:id="@+id/add_dog_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/main_activity_add_button_margin_vertical"
        android:text="@string/main_activity_button_add_dog"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/empty_state_image"
        android:layout_width="@dimen/main_activity_empty_state_image_size"
        android:layout_height="@dimen/main_activity_empty_state_image_size"
        android:src="@drawable/empty_state"
        android:visibility="visible"
        android:translationZ="-1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:translationZ="2dp"
        android:background="@color/white">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loader_animation"
            android:layout_width="@dimen/main_activity_loader_size"
            android:layout_height="@dimen/main_activity_loader_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading_dog" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
